Remove unsupported JVM flag since Java 13. Added new timings