@@ -8,7 +8,7 @@ cd ../target
 :: 900m max usage for 8 threads
 set mem_alloc=900m
 
-java -XX:+AggressiveOpts -server -Xms%mem_alloc% -Xmx%mem_alloc% %ALL_ARGS% -jar e2solver.jar
+java -Xms%mem_alloc% -Xmx%mem_alloc% %ALL_ARGS% -jar e2solver.jar
 
 chdir /d %ORIG_DIR%
 pause
